--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -1,15 +1,17 @@
 # 项目相关配置
 ruoyi:
   # 名称
-  name: RuoYi
+  name: CodePenguin-api
   # 版本
   version: 3.8.4
   # 版权年份
-  copyrightYear: 2022
+  copyrightYear: 2023
   # 实例演示开关
   demoEnabled: true
   # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-  profile: D:/ruoyi/uploadPath
+  profile: /var/www/html/uploadPath
+  #课程文件路径
+  subjectFile: /var/www/html/uploadPath/subject
   # 获取ip地址开关
   addressEnabled: false
   # 验证码类型 math 数组计算 char 字符验证
@@ -59,9 +61,9 @@ spring:
   servlet:
      multipart:
        # 单个文件大小
-       max-file-size:  10MB
+       max-file-size:  500MB
        # 设置总上传的文件大小
-       max-request-size:  20MB
+       max-request-size:  5000MB
   # 服务模块
   devtools:
     restart:
@@ -76,7 +78,7 @@ spring:
     # 数据库索引
     database: 0
     # 密码
-    password: 
+    password: suiyi1420,./
     # 连接超时时间
     timeout: 10s
     lettuce:
